cabal-version:       >= 1.6
name:                bimap
version:             0.3.0
synopsis:            Bidirectional mapping between two key types
description:
  A data structure representing a bidirectional mapping between two
  key types. Each value in the bimap is associated with exactly one
  value of the opposite type.
category:            Data
license:             BSD3
license-file:        LICENSE
copyright:           Stuart Cook and contributors 2008, Joel Williamson 2015
author:              Stuart Cook and contributors 2008, Joel Williamson 2015
maintainer:          Joel Williamson <joel@joelwilliamson.ca>
homepage:            https://github.com/joelwilliamson/bimap
-- This build-type is a lie, but we're only using hooks to specify
-- a test command, so there shouldn't be any problems.
build-type:          Simple
tested-with:         GHC ==7.8.4
extra-source-files:
    HISTORY
    tests.sh
    Test/Tests.hs
    Test/Util.hs
    Test/RunTests.hs

Library
  build-depends:       base >= 4 && <5, containers
  ghc-options:         -Wall
  exposed-modules:
      Data.Bimap

source-repository head
    type:         git
    location:     https://github.com/joelwilliamson/bimap.git
